# plytix-pim-client

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: lint-and-tests.yml  publish-to-pypi.yml  scheduled.yml
src/plytix_pim_client/: __init__.py  client.py  config.py  constants.py  exceptions.py  logger.py  mixins.py
src/plytix_pim_client/api/: base.py  filters.py  products.py
src/plytix_pim_client/api/assets/: search.py
src/plytix_pim_client/api/assets/asset/: create.py  delete.py  get.py  replace.py  update.py
src/plytix_pim_client/api/assets/categories/: create.py  search.py
src/plytix_pim_client/api/common/: create.py  delete.py  get.py  search.py  update.py
src/plytix_pim_client/api/product_families/: create.py  get.py  search.py  update.py
src/plytix_pim_client/api/product_families/product_family/: create.py  delete.py  get.py  update.py
src/plytix_pim_client/api/products/: create.py  search.py
src/plytix_pim_client/api/products/attributes/: search.py
src/plytix_pim_client/api/products/categories/: search.py
src/plytix_pim_client/api/products/families/: search.py
src/plytix_pim_client/api/products/product/: create.py  delete.py  family.py  get.py  update.py
src/plytix_pim_client/api/products/relationships/: search.py
src/plytix_pim_client/dtos/: asset.py  base.py  family.py  filters.py  pagination.py  product.py  request.py  response.py
src/plytix_pim_client/dtos/assets/: asset.py  category.py
src/plytix_pim_client/dtos/common/: category.py
src/plytix_pim_client/dtos/products/: asset.py  attribute.py  category.py  family.py  product.py  relationship.py  variant.py
src/plytix_pim_client/http/: async_.py  base.py  sync.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/async_/: conftest.py
tests/integration/async_/api/: test_filters.py
tests/integration/sync/: conftest.py
tests/integration/sync/api/: test_filters.py
tests/unit/: conftest.py
tests/unit/async_/: conftest.py  test_foo.py
tests/unit/async_/api/: test_filters.py
tests/unit/async_/http/: test_make_request.py
tests/unit/sync/: conftest.py
(+242 files in other folders)
