[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plytix-pim-client"
version = "0.0.1"
authors = [
  { name="Arturo Parra", email="arturoteleco95@proton.me" },
]
description = "An HTTP client in Python for Plytix PIM API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TheTelematic/plytix-pim-client"
Issues = "https://github.com/TheTelematic/plytix-pim-client/issues"
