[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plytix-pim-client"
version = "0.0.3"
authors = [
  { name="Arturo Parra", email="arturoteleco95@proton.me" },
]
description = "An HTTP client in Python for Plytix PIM API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/TheTelematic/plytix-pim-client"
Issues = "https://github.com/TheTelematic/plytix-pim-client/issues"
